@@ -53,6 +53,25 @@ template<typename T>
 template<typename T>
 const T A<T>::a = T(3);
 
+#if !__GXX_WEAK__
+// Explicitly instantiate for systems with no COMDAT or weak support.
+template int A<int>::a;
+template int A<unsigned int>::a;
+template int A<short>::a;
+template int A<unsigned short>::a;
+template int A<long>::a;
+template int A<unsigned long>::a;
+template int A<long long>::a;
+template int A<unsigned long long>::a;
+template int A<char>::a;
+template int A<signed char>::a;
+template int A<unsigned char>::a;
+template int A<wchar_t>::a;
+template int A<float>::a;
+template int A<double>::a;
+template int A<long double>::a;
+#endif
+
 void test02()
 {
   bool test = true;
