@@ -180,6 +180,10 @@ template
 template 
   unsigned char
   std::basic_string<unsigned char>::_Rep::_S_terminal;
+
+template
+  std::basic_streambuf<gnu_char_type>::int_type
+  std::basic_streambuf<gnu_char_type>::_S_pback_size;
 #endif
 
 int main()
